# pubmed-fetcher

./: README.md  cli.py  pyproject.toml  result.csv
pubmed_fetcher/: fetcher.py
